[ios] Fix rotations in tab grid

The tab grid was not behaving properly in rotations. The page would
change when it is not supposed to. This is due to the page being set
inside |-scrollViewDidScroll:| while the rotation was occurring.
The fix is to separately set the page for non-user-dragging scroll
in |-scrollViewDidEndScrollingAnimation:|.

Bug: 828735
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Ib325eb6ef5d5ebb98274ec565cdbb03a21b8e9e1
Reviewed-on: https://chromium-review.googlesource.com/998055
Reviewed-by: Sergio Collazos <sczs@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Reviewed-by: edchin <edchin@chromium.org>
Commit-Queue: edchin <edchin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548541}
Former-commit-id: a606972d0f1f6c28af88f6f23b272bb0422988d1